Add extension system models

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "crates/nzbg",
   "crates/nzbg-scheduler",
   "crates/nzbg-feed",
+  "crates/nzbg-extension",
   "crates/nzbg-core",
   "crates/nzbg-nzb",
   "crates/nzbg-nntp",
