--- a/crates/nzbg/Cargo.toml
+++ b/crates/nzbg/Cargo.toml
@@ -5,16 +5,20 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
+async-trait = "0.1"
 clap = { version = "4", features = ["derive"] }
 nzbg-config = { path = "../nzbg-config" }
 nzbg-logging = { path = "../nzbg-logging" }
+nzbg-nntp = { path = "../nzbg-nntp" }
 nzbg-queue = { path = "../nzbg-queue" }
 nzbg-scheduler = { path = "../nzbg-scheduler" }
 nzbg-server = { path = "../nzbg-server" }
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
+nzbg-yenc = { path = "../nzbg-yenc" }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dirs = "5.0"
 
 [dev-dependencies]
+crc32fast = "1"
 tempfile = "3.11"
