feat: scheduler tick bodies + disk state integration (items 3-4)
- CommandExecutor wired to QueueHandle (pause/resume/rate)
- DiskStateFlush service: periodic queue snapshot to disk
- QueueHandle: pause_all, resume_all, set_download_rate, get_queue_snapshot
- ServiceDeps injection into start_services
- app.rs: state lock, disk recovery, shutdown flush

--- a/crates/nzbg-scheduler/Cargo.toml
+++ b/crates/nzbg-scheduler/Cargo.toml
@@ -9,8 +9,12 @@ async-trait = "0.1"
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 fs2 = "0.4"
 nzbg-config = { path = "../nzbg-config" }
+nzbg-core = { path = "../nzbg-core" }
+nzbg-diskstate = { path = "../nzbg-diskstate" }
+nzbg-queue = { path = "../nzbg-queue" }
 tokio = { version = "1.35", features = ["fs", "macros", "rt", "sync", "time"] }
 tracing = "0.1"
 
 [dev-dependencies]
 serde_json = "1.0"
+tempfile = "3"
