--- a/crates/nzbg/Cargo.toml
+++ b/crates/nzbg/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0"
 async-trait = "0.1"
 clap = { version = "4", features = ["derive"] }
 nzbg-config = { path = "../nzbg-config" }
+nzbg-diskstate = { path = "../nzbg-diskstate" }
 nzbg-logging = { path = "../nzbg-logging" }
 nzbg-nntp = { path = "../nzbg-nntp" }
 nzbg-queue = { path = "../nzbg-queue" }
