--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2024"
 [dependencies]
 axum = { version = "0.7", features = ["macros"] }
 base64 = "0.22"
+nzbg-core = { path = "../nzbg-core" }
+nzbg-queue = { path = "../nzbg-queue" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
 tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs"] }
 
 [dev-dependencies]
