--- a/crates/nzbg-logging/Cargo.toml
+++ b/crates/nzbg-logging/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 [dependencies]
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
 serde = { version = "1.0", features = ["derive"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 nzbg-core = { path = "../nzbg-core" }
 
