--- a/crates/nzbg-nntp/Cargo.toml
+++ b/crates/nzbg-nntp/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+async-trait = "0.1"
 rustls = { version = "0.23", features = ["ring"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "2.0"
-tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "macros"] }
+tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "macros", "sync"] }
 tokio-rustls = "0.26"
 webpki-roots = "0.26"
 
