--- a/crates/nzbg-queue/Cargo.toml
+++ b/crates/nzbg-queue/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 nzbg-core = { path = "../nzbg-core" }
 thiserror = "2.0"
 tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread"] }
+tracing = "0.1"
 
 [dev-dependencies]
 serde_json = "1.0"
