--- a/crates/nzbg-extension/Cargo.toml
+++ b/crates/nzbg-extension/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
+async-trait = "0.1"
 serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1", features = ["process"] }
 
 [dev-dependencies]
 serde_json = "1.0"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
