--- a/crates/nzbg-postproc/Cargo.toml
+++ b/crates/nzbg-postproc/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2024"
 [dependencies]
 async-trait = "0.1"
 thiserror = "2.0"
-tokio = { version = "1", features = ["macros", "process", "sync", "rt-multi-thread"] }
+tokio = { version = "1", features = ["fs", "macros", "process", "sync", "rt-multi-thread"] }
 
 [dev-dependencies]
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
+tempfile = "3"
+tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
