--- a/crates/nzbg-feed/Cargo.toml
+++ b/crates/nzbg-feed/Cargo.toml
@@ -5,10 +5,13 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
+async-trait = "0.1"
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
 nzbg-core = { path = "../nzbg-core" }
+quick-xml = "0.37"
 regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 serde_json = "1.0"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
