--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -15,4 +15,5 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"]
 tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs"] }
 
 [dev-dependencies]
+tempfile = "3"
 tower = "0.5"
