--- a/crates/nzbg/Cargo.toml
+++ b/crates/nzbg/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
+libc = "0.2"
 async-trait = "0.1"
 clap = { version = "4", features = ["derive"] }
 nzbg-config = { path = "../nzbg-config" }
