--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 axum = { version = "0.7", features = ["macros"] }
 base64 = "0.22"
 nzbg-core = { path = "../nzbg-core" }
+nzbg-diskstate = { path = "../nzbg-diskstate" }
 nzbg-queue = { path = "../nzbg-queue" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
