--- a/crates/nzbg/Cargo.toml
+++ b/crates/nzbg/Cargo.toml
@@ -9,9 +9,11 @@ libc = "0.2"
 async-trait = "0.1"
 clap = { version = "4", features = ["derive"] }
 nzbg-config = { path = "../nzbg-config" }
+nzbg-core = { path = "../nzbg-core" }
 nzbg-diskstate = { path = "../nzbg-diskstate" }
 nzbg-logging = { path = "../nzbg-logging" }
 nzbg-nntp = { path = "../nzbg-nntp" }
+nzbg-nzb = { path = "../nzbg-nzb" }
 nzbg-queue = { path = "../nzbg-queue" }
 nzbg-scheduler = { path = "../nzbg-scheduler" }
 nzbg-server = { path = "../nzbg-server" }
@@ -22,5 +24,6 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dirs = "5.0"
 
 [dev-dependencies]
+chrono = "0.4"
 crc32fast = "1"
 tempfile = "3.11"
