--- a/crates/nzbg/Cargo.toml
+++ b/crates/nzbg/Cargo.toml
@@ -11,9 +11,11 @@ clap = { version = "4", features = ["derive"] }
 nzbg-config = { path = "../nzbg-config" }
 nzbg-core = { path = "../nzbg-core" }
 nzbg-diskstate = { path = "../nzbg-diskstate" }
+nzbg-extension = { path = "../nzbg-extension" }
 nzbg-logging = { path = "../nzbg-logging" }
 nzbg-nntp = { path = "../nzbg-nntp" }
 nzbg-nzb = { path = "../nzbg-nzb" }
+nzbg-postproc = { path = "../nzbg-postproc" }
 nzbg-queue = { path = "../nzbg-queue" }
 nzbg-scheduler = { path = "../nzbg-scheduler" }
 nzbg-server = { path = "../nzbg-server" }
