--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2024"
 [dependencies]
 axum = { version = "0.7", features = ["macros"] }
 base64 = "0.22"
+chrono = { version = "0.4", default-features = false, features = ["clock"] }
 nzbg-core = { path = "../nzbg-core" }
 nzbg-diskstate = { path = "../nzbg-diskstate" }
+nzbg-logging = { path = "../nzbg-logging" }
 nzbg-queue = { path = "../nzbg-queue" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
