--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -12,6 +12,7 @@ nzbg-core = { path = "../nzbg-core" }
 nzbg-diskstate = { path = "../nzbg-diskstate" }
 nzbg-logging = { path = "../nzbg-logging" }
 nzbg-queue = { path = "../nzbg-queue" }
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
