feed: add FeedHandle actor and implement FetchFeed scheduler command
Add FeedCommand enum, FeedHandle (cloneable actor handle), and
run_actor() loop to FeedCoordinator. Add FeedHandle to CommandDeps
so scheduler FetchFeed command triggers feed processing.

Phase 4 items #26 (partial) and #27.

--- a/crates/nzbg-scheduler/Cargo.toml
+++ b/crates/nzbg-scheduler/Cargo.toml
@@ -10,6 +10,7 @@ chrono = { version = "0.4", default-features = false, features = ["clock"] }
 fs2 = "0.4"
 nzbg-config = { path = "../nzbg-config" }
 nzbg-core = { path = "../nzbg-core" }
+nzbg-feed = { path = "../nzbg-feed" }
 nzbg-diskstate = { path = "../nzbg-diskstate" }
 nzbg-queue = { path = "../nzbg-queue" }
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
