--- a/crates/nzbg-feed/Cargo.toml
+++ b/crates/nzbg-feed/Cargo.toml
@@ -11,7 +11,8 @@ nzbg-core = { path = "../nzbg-core" }
 quick-xml = "0.37"
 regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1", features = ["sync"] }
 
 [dev-dependencies]
 serde_json = "1.0"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
