Wire FeedCoordinator into app with config parsing and feeds RPC
Add FeedConfigEntry to nzbg-config with extract_feeds() parser.
Add HttpFeedFetcher implementation. Spawn FeedCoordinator actor in
app.rs when feed configs exist. Wire FeedHandle into AppState for
feeds RPC. Implement feeds RPC returning feed info list.

Phase 4 items #26 and #31 (feed persistence wiring deferred to startup).

--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -9,6 +9,7 @@ base64 = "0.22"
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 nzbg-config = { path = "../nzbg-config" }
 nzbg-core = { path = "../nzbg-core" }
+nzbg-feed = { path = "../nzbg-feed" }
 nzbg-diskstate = { path = "../nzbg-diskstate" }
 nzbg-logging = { path = "../nzbg-logging" }
 nzbg-queue = { path = "../nzbg-queue" }
