--- a/crates/nzbg-feed/Cargo.toml
+++ b/crates/nzbg-feed/Cargo.toml
@@ -10,6 +10,7 @@ chrono = { version = "0.4", default-features = false, features = ["clock", "serd
 nzbg-core = { path = "../nzbg-core" }
 quick-xml = "0.37"
 regex = "1.10"
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["sync"] }
 
