nntp: add ServerPoolManager for runtime server activate/deactivate
Add ServerPoolManager that wraps ServerPool with RwLock for runtime
server toggling. Implement ActivateServer/DeactivateServer scheduler
commands using the manager. Wire server_pool into CommandDeps.

Phase 4 item #28.

--- a/crates/nzbg-scheduler/Cargo.toml
+++ b/crates/nzbg-scheduler/Cargo.toml
@@ -12,6 +12,7 @@ nzbg-config = { path = "../nzbg-config" }
 nzbg-core = { path = "../nzbg-core" }
 nzbg-feed = { path = "../nzbg-feed" }
 nzbg-diskstate = { path = "../nzbg-diskstate" }
+nzbg-nntp = { path = "../nzbg-nntp" }
 nzbg-queue = { path = "../nzbg-queue" }
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
 tokio = { version = "1.35", features = ["fs", "macros", "rt", "sync", "time"] }
