--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -20,6 +20,7 @@ thiserror = "2.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
 tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs"] }
 axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
+quick-xml = "0.37"
 rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
 
 [dev-dependencies]
