--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -22,6 +22,7 @@ tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs"] }
 axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
 quick-xml = "0.37"
 rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
+ring = "0.17.14"
 
 [dev-dependencies]
 tempfile = "3"
