--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 axum = { version = "0.7", features = ["macros"] }
 base64 = "0.22"
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
+percent-encoding = "2"
 nzbg-config = { path = "../nzbg-config" }
 nzbg-core = { path = "../nzbg-core" }
 nzbg-feed = { path = "../nzbg-feed" }
@@ -18,11 +19,13 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
+tower = { version = "0.5", features = ["util"] }
 tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs"] }
 axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
 quick-xml = "0.37"
 rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
 ring = "0.17.14"
+fs2 = "0.4"
 
 [dev-dependencies]
 tempfile = "3"
