Derive download concurrency from config instead of hardcoding
- max_connections: sum server connection counts from config instead of hardcoded 4
- max_articles_per_file: set to total_connections instead of hardcoded 2
- SpeedLimiter: split acquire() into reserve()+after_sleep() so the
  tokio::Mutex is never held across a sleep; skip lock entirely when
  rate=0 (unlimited) using an AtomicU64 fast path

--- a/crates/nzbg/Cargo.toml
+++ b/crates/nzbg/Cargo.toml
@@ -15,6 +15,7 @@ nzbg-extension = { path = "../nzbg-extension" }
 nzbg-feed = { path = "../nzbg-feed" }
 nzbg-logging = { path = "../nzbg-logging" }
 nzbg-nntp = { path = "../nzbg-nntp" }
+rustls = { version = "0.23", default-features = false, features = ["ring"] }
 nzbg-nzb = { path = "../nzbg-nzb" }
 nzbg-postproc = { path = "../nzbg-postproc" }
 nzbg-queue = { path = "../nzbg-queue" }
