--- a/crates/nzbg-nntp/Cargo.toml
+++ b/crates/nzbg-nntp/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 async-trait = "0.1"
+futures = "0.3.31"
 rustls = { version = "0.23", features = ["ring"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "2.0"
