--- a/crates/nzbg/Cargo.toml
+++ b/crates/nzbg/Cargo.toml
@@ -26,6 +26,7 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dirs = "5.0"
+dashmap = "6.1.0"
 
 [dev-dependencies]
 chrono = "0.4"
