--- a/crates/nzbg-postproc/Cargo.toml
+++ b/crates/nzbg-postproc/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 async-trait = "0.1"
 nzbg-core = { path = "../nzbg-core" }
 nzbg-extension = { path = "../nzbg-extension" }
+nzbg-par2 = { path = "../nzbg-par2" }
 thiserror = "2.0"
 tokio = { version = "1", features = ["fs", "macros", "process", "sync", "rt-multi-thread"] }
 tracing = "0.1"
