--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -15,7 +15,9 @@ nzbg-diskstate = { path = "../nzbg-diskstate" }
 nzbg-logging = { path = "../nzbg-logging" }
 nzbg-queue = { path = "../nzbg-queue" }
 nzbg-scheduler = { path = "../nzbg-scheduler" }
+mime_guess = "2"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
+rust-embed = "8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
