feat(rpc): implement testserver method
Connect to an NNTP server with given parameters, authenticate if
credentials are provided, and return a success/error message string.
Adds nzbg-nntp as a dependency of nzbg-server.

--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -13,6 +13,7 @@ nzbg-core = { path = "../nzbg-core" }
 nzbg-feed = { path = "../nzbg-feed" }
 nzbg-diskstate = { path = "../nzbg-diskstate" }
 nzbg-logging = { path = "../nzbg-logging" }
+nzbg-nntp = { path = "../nzbg-nntp" }
 nzbg-queue = { path = "../nzbg-queue" }
 nzbg-scheduler = { path = "../nzbg-scheduler" }
 mime_guess = "2"
