test(e2e): add end-to-end download flow
Add a full integration test that runs nzbg with the NNTP stub,
appends a sample NZB via JSON-RPC, and verifies assembled output.
Split fixtures for basic vs complete scenarios and expose a library
entry to reuse app logic in tests.

--- a/crates/nzbg/Cargo.toml
+++ b/crates/nzbg/Cargo.toml
@@ -32,3 +32,7 @@ dashmap = "6.1.0"
 chrono = "0.4"
 crc32fast = "1"
 tempfile = "3.11"
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+nzbg-nntp-stub = { path = "../nzbg-nntp-stub" }
+serde_json = "1.0"
+base64 = "0.22"
