chore: add GPL-2.0-or-later license
Add LICENSE file with GPLv2 text and set license = "GPL-2.0-or-later"
in the workspace Cargo.toml, inherited by all 16 crates.

--- a/crates/nzbg-logging/Cargo.toml
+++ b/crates/nzbg-logging/Cargo.toml
@@ -2,6 +2,7 @@
 name = "nzbg-logging"
 version = "0.1.0"
 edition = "2024"
+license.workspace = true
 
 [dependencies]
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
