--- a/crates/nzbg-queue/Cargo.toml
+++ b/crates/nzbg-queue/Cargo.toml
@@ -2,6 +2,7 @@
 name = "nzbg-queue"
 version = "0.1.0"
 edition = "2024"
+license.workspace = true
 
 [dependencies]
 nzbg-core = { path = "../nzbg-core" }
