--- a/crates/nzbg-core/Cargo.toml
+++ b/crates/nzbg-core/Cargo.toml
@@ -2,6 +2,7 @@
 name = "nzbg-core"
 version = "0.1.0"
 edition = "2024"
+license.workspace = true
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
