--- a/crates/nzbg-server/Cargo.toml
+++ b/crates/nzbg-server/Cargo.toml
@@ -2,6 +2,7 @@
 name = "nzbg-server"
 version = "0.1.0"
 edition = "2024"
+license.workspace = true
 
 [dependencies]
 axum = { version = "0.7", features = ["macros"] }
