feat(scheduler): add weighted fair queuing for server selection
Implement a pull-based server scheduler inspired by heterogeneous
multiprocessor scheduling to maximize download throughput and keep
all server connections saturated.

Algorithms applied:
- Weighted Fair Queuing (WFQ): assign articles to the server with
  the lowest pending_bytes/weight ratio, proportional to throughput
- Join-Shortest-Queue (JSQ): normalized queue depth routing, proven
  optimal for heterogeneous servers
- EWMA throughput estimation: adaptive server weights with alpha=0.3
  for smooth yet responsive convergence
- LATE-style straggler detection: flag articles exceeding 3x expected
  transfer time for future speculative retry

Key changes:
- New ServerScheduler module with per-server slots, WFQ selection,
  and 16 unit tests
- Coordinator uses tokio::select! with 50ms refill tick to prevent
  pipeline bubbles between command arrivals
- Adaptive per-file concurrency cap relaxes when only one file is
  runnable, preventing single-file starvation
- Sequential server fetch with 60s timeout replaces parallel-blast
  when scheduler targets a specific server
- Download timing fed back via DownloadResult for EWMA updates

--- a/crates/bergamot-queue/Cargo.toml
+++ b/crates/bergamot-queue/Cargo.toml
@@ -6,6 +6,7 @@ license.workspace = true
 
 [dependencies]
 bergamot-core = { path = "../bergamot-core" }
+bergamot-nntp = { path = "../bergamot-nntp" }
 bergamot-nzb = { path = "../bergamot-nzb" }
 thiserror = "2.0"
 tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread"] }
