--- a/crates/bergamot-nntp/Cargo.toml
+++ b/crates/bergamot-nntp/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "2.0"
 tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "macros", "sync"] }
 tokio-rustls = "0.26"
+tracing = "0.1"
 webpki-roots = "0.26"
 
 [dev-dependencies]
