--- a/crates/bergamot-server/Cargo.toml
+++ b/crates/bergamot-server/Cargo.toml
@@ -20,6 +20,7 @@ bergamot-scheduler = { path = "../bergamot-scheduler" }
 mime_guess = "2"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
 rust-embed = "8"
+jsonrpsee = { version = "0.24", default-features = false, features = ["server"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
