--- a/crates/bergamot-nntp/Cargo.toml
+++ b/crates/bergamot-nntp/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 [dependencies]
 async-trait = "0.1"
 futures = "0.3.31"
-rustls = { version = "0.23", features = ["ring"] }
+rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "2.0"
 tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "macros", "sync"] }
