refactor(shutdown): replace watch<bool> with CancellationToken
Replace the hand-rolled ShutdownHandle (watch channel with bool flag)
with tokio_util::sync::CancellationToken. This provides a cleaner,
purpose-built API for cooperative cancellation and integrates directly
into select! blocks without the changed()/borrow() boilerplate.

Also use biased select! with shutdown checked first to ensure prompt
response to shutdown signals.

--- a/crates/bergamot/Cargo.toml
+++ b/crates/bergamot/Cargo.toml
@@ -28,6 +28,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dirs = "5.0"
 dashmap = "6.1.0"
+tokio-util = { version = "0.7.18", features = ["rt"] }
 
 [dev-dependencies]
 chrono = "0.4"
