--- a/crates/bergamot-server/Cargo.toml
+++ b/crates/bergamot-server/Cargo.toml
@@ -32,6 +32,7 @@ quick-xml = "0.37"
 rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
 ring = "0.17.14"
 fs2 = "0.4"
+tokio-util = { version = "0.7.18", features = ["rt"] }
 
 [dev-dependencies]
 tempfile = "3"
