--- a/crates/bergamot-server/Cargo.toml
+++ b/crates/bergamot-server/Cargo.toml
@@ -26,7 +26,8 @@ serde_json = "1.0"
 thiserror = "2.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
 tower = { version = "0.5", features = ["util"] }
-tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }
+tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
+tracing = "0.1"
 axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
 quick-xml = "0.37"
 rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
