--- a/crates/bergamot-nntp/Cargo.toml
+++ b/crates/bergamot-nntp/Cargo.toml
@@ -6,6 +6,7 @@ license.workspace = true
 
 [dependencies]
 async-trait = "0.1"
+flate2 = "1.1"
 futures = "0.3.31"
 rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
 serde = { version = "1.0", features = ["derive"] }
