feat(server): add automatic TLS certificate management
Auto-generate a local CA and server certificate using rcgen when
SecureControl is enabled without explicit SecureCert/SecureKey paths.
Certificates are stored in the CertStore directory (default /config/ssl)
and the server cert is renewed when within 30 days of expiry.

Users import the CA cert (bergamot-ca.pem) into their browser/OS trust
store once to avoid warnings. Existing manual cert configuration
continues to work unchanged.

- Add tls module with CA and server cert generation via rcgen 0.14
- Add CertStore field to ServerConfig, defaulting to /config/ssl
- Update validation to accept CertStore as alternative to cert paths
- Update Docker volumes and NixOS ReadWritePaths for cert directory
- Document auto-TLS behavior in bergamot.conf.sample

--- a/bergamot.conf.sample
+++ b/bergamot.conf.sample
@@ -50,9 +50,17 @@ ControlPassword=tegbzn6789
 #AddUsername=
 #AddPassword=
 
-# Uncomment to enable HTTPS
+# Uncomment to enable HTTPS.
+# If SecureCert/SecureKey are omitted, bergamot auto-generates a local CA
+# and server certificate in CertStore on first run.  Import the CA cert
+# (bergamot-ca.pem) into your browser/OS trust store once to avoid warnings.
 #SecureControl=yes
 #SecurePort=6791
+
+# Directory for auto-generated TLS certificates (default: /config/ssl)
+#CertStore=/config/ssl
+
+# To use your own certificates instead of auto-generation:
 #SecureCert=/path/to/cert.pem
 #SecureKey=/path/to/key.pem
 
