chore: prepare for v0.1.0 release
- Add CHANGELOG.md with full 0.1.0 feature list including WFQ scheduler
- Add CONTRIBUTING.md with dev workflow and areas needing help
- Add package metadata to Cargo.toml (description, repository, keywords)
- Add "Current status" section to README documenting alpha limitations
- Default ControlIP to 127.0.0.1 in sample config for security
- Replace .unwrap() with .expect() for config lock in app.rs

--- a/crates/bergamot/Cargo.toml
+++ b/crates/bergamot/Cargo.toml
@@ -3,6 +3,12 @@ name = "bergamot"
 version = "0.1.0"
 edition = "2024"
 license.workspace = true
+description = "An efficient Usenet binary downloader — a ground-up Rust reimplementation of NZBGet"
+homepage = "https://github.com/iainh/bergamot"
+repository = "https://github.com/iainh/bergamot"
+readme = "../../README.md"
+keywords = ["usenet", "nntp", "nzb", "downloader", "nzbget"]
+categories = ["command-line-utilities", "network-programming"]
 
 [dependencies]
 anyhow = "1.0"
