--- a/bergamot.conf.sample
+++ b/bergamot.conf.sample
@@ -34,8 +34,8 @@ LogFile=${DestDir}/bergamot.log
 # SECURITY
 ##############################################################################
 
-# IP address to listen on (use 127.0.0.1 for local-only access)
-ControlIP=0.0.0.0
+# IP address to listen on (use 0.0.0.0 to allow remote access)
+ControlIP=127.0.0.1
 ControlPort=6789
 
 # Web UI / API credentials
