docs: fix stale configuration doc references
Update path from docs/08-configuration.md to
docs/implementation/06-configuration.md in sample config, README,
and NixOS module.

--- a/bergamot.conf.sample
+++ b/bergamot.conf.sample
@@ -1,6 +1,6 @@
 # bergamot sample configuration file
 # Copy this file to bergamot.conf and edit to suit your setup.
-# See docs/08-configuration.md for full option reference.
+# See docs/implementation/06-configuration.md for full option reference.
 
 ##############################################################################
 # PATHS
